k8s/local/ns-client-service/db.yaml
# PostgreSQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-clients
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre-clients
  template:
    metadata:
      labels:
        app: postgre-clients
    spec:
      containers:
        - name: postgre-clients
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgre-clients-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgre-clients-storage
          persistentVolumeClaim:
            claimName: postgre-clients-pvc
---
# PostgreSQL Service (Renamed to db-contracts)
apiVersion: v1
kind: Service
metadata:
  name: postgre-clients
spec:
  selector:
    app: postgre-clients
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP  # Exposes PostgreSQL within the cluster
