k8s/local/ns-client-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - node-sample.local
      secretName: tls-secret
  rules:
    - host: node-sample.local
      http:
        paths:
          - path: /api/client-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ns-client-service
                port:
                  number: 81
